# GifDecoder

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/baidu/crazyorange/gifdecoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: gif_main.cpp
app/src/main/java/com/baidu/crazyorange/gifdecoder/: MainActivity.java
app/src/main/java/com/baidu/crazyorange/gifdecoder/gif/: GifDecoder.java
app/src/test/java/com/baidu/crazyorange/gifdecoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
